--- a/style.css
+++ b/style.css
@@ -251,6 +251,37 @@ footer {
   color: #040c15;
 }
 
+@media(max-width: 576px)
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .container {
+    width: 100% !important;
+    padding: 10px;
+  }
+
+  .game-center {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .money-won {
+    position: relative;
+  }
+
+  .money-won ul {
+    display: inline;
+  }
+
+  img {
+    height: 20px;
+  }
+}
 /* .modal {
   position: fixed;
   z-index: 1;
